pins interruption added

--- a/BrakeDriver.ioc
+++ b/BrakeDriver.ioc
@@ -60,9 +60,10 @@ Mcu.UserName=STM32F103RBTx
 MxCube.Version=5.1.0
 MxDb.Version=DB.5.0.10
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-NVIC.DMA1_Channel5_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.DMA1_Channel1_IRQn=true\:3\:0\:true\:false\:true\:false\:true
+NVIC.DMA1_Channel5_IRQn=true\:2\:0\:true\:false\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.EXTI9_5_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -70,12 +71,13 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.TIM3_IRQn=true\:1\:0\:true\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA0-WKUP.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA0-WKUP.GPIO_Label=ACS_FAULT
-PA0-WKUP.GPIO_PuPd=GPIO_PULLUP
+PA0-WKUP.GPIO_PuPd=GPIO_PULLDOWN
 PA0-WKUP.Locked=true
-PA0-WKUP.Signal=GPIO_Input
+PA0-WKUP.Signal=GPXTI0
 PA1.GPIOParameters=GPIO_Label
 PA1.GPIO_Label=ACS_CURRENT
 PA1.Locked=true
@@ -84,17 +86,22 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
-PA6.GPIOParameters=GPIO_Label
-PA6.GPIO_Label=ENCODER_1_A
-PA6.Signal=S_TIM3_CH1
+PA6.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
+PA6.GPIO_Label=LOW_LIMIT_SWITCH
+PA6.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PA6.Locked=true
+PA6.Signal=GPXTI6
 PA7.GPIOParameters=GPIO_Label
-PA7.GPIO_Label=ENCODER_1_B
-PA7.Signal=S_TIM3_CH2
-PB0.GPIOParameters=GPIO_Label
+PA7.GPIO_Label=HIGH_LIMIT_SWITCH
+PA7.Locked=true
+PA7.Signal=GPXTI7
+PB0.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB0.GPIO_Label=ENCODER_2_A
+PB0.GPIO_PuPd=GPIO_PULLDOWN
 PB0.Signal=S_TIM3_CH3
-PB1.GPIOParameters=GPIO_Label
+PB1.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB1.GPIO_Label=ENCODER_2_B
+PB1.GPIO_PuPd=GPIO_PULLDOWN
 PB1.Signal=S_TIM3_CH4
 PB10.Mode=I2C
 PB10.Signal=I2C2_SCL
@@ -157,20 +164,20 @@ SH.ADCx_IN12.0=ADC1_IN12,IN12
 SH.ADCx_IN12.ConfNb=1
 SH.ADCx_IN13.0=ADC1_IN13,IN13
 SH.ADCx_IN13.ConfNb=1
-SH.S_TIM3_CH1.0=TIM3_CH1,Input_Capture1_from_TI1
-SH.S_TIM3_CH1.ConfNb=1
-SH.S_TIM3_CH2.0=TIM3_CH2,Input_Capture2_from_TI2
-SH.S_TIM3_CH2.ConfNb=1
+SH.GPXTI0.0=GPIO_EXTI0
+SH.GPXTI0.ConfNb=1
+SH.GPXTI6.0=GPIO_EXTI6
+SH.GPXTI6.ConfNb=1
+SH.GPXTI7.0=GPIO_EXTI7
+SH.GPXTI7.ConfNb=1
 SH.S_TIM3_CH3.0=TIM3_CH3,Input_Capture3_from_TI3
 SH.S_TIM3_CH3.ConfNb=1
 SH.S_TIM3_CH4.0=TIM3_CH4,Input_Capture4_from_TI4
 SH.S_TIM3_CH4.ConfNb=1
 TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
-TIM3.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
-TIM3.Channel-Input_Capture2_from_TI2=TIM_CHANNEL_2
 TIM3.Channel-Input_Capture3_from_TI3=TIM_CHANNEL_3
 TIM3.Channel-Input_Capture4_from_TI4=TIM_CHANNEL_4
-TIM3.IPParameters=Channel-Input_Capture1_from_TI1,Channel-Input_Capture2_from_TI2,Channel-Input_Capture3_from_TI3,Channel-Input_Capture4_from_TI4,Prescaler,Period,AutoReloadPreload
+TIM3.IPParameters=Channel-Input_Capture3_from_TI3,Channel-Input_Capture4_from_TI4,Prescaler,Period,AutoReloadPreload
 TIM3.Period=1000
 TIM3.Prescaler=64
 VP_SYS_VS_Systick.Mode=SysTick
