--- a/BrakeDriver.ioc
+++ b/BrakeDriver.ioc
@@ -5,6 +5,14 @@ ADC1.NbrOfConversionFlag=1
 ADC1.Rank-0\#ChannelRegularConversion=1
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
 ADC1.master=1
+CAN.BS1=CAN_BS1_2TQ
+CAN.BS2=CAN_BS2_1TQ
+CAN.CalculateTimeBit=1000
+CAN.CalculateTimeQuantum=250.0
+CAN.IPParameters=CalculateTimeQuantum,CalculateTimeBit,SJW,NART,BS1,Prescaler,BS2
+CAN.NART=ENABLE
+CAN.Prescaler=2
+CAN.SJW=CAN_SJW_2TQ
 Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.ADC1.0.Instance=DMA1_Channel1
 Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
@@ -30,21 +38,24 @@ File.Version=6
 KeepUserPlacement=false
 Mcu.Family=STM32F1
 Mcu.IP0=ADC1
-Mcu.IP1=DMA
-Mcu.IP2=I2C2
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=SYS
-Mcu.IP6=TIM3
-Mcu.IPNb=7
+Mcu.IP1=CAN
+Mcu.IP2=DMA
+Mcu.IP3=I2C2
+Mcu.IP4=NVIC
+Mcu.IP5=RCC
+Mcu.IP6=SYS
+Mcu.IP7=TIM3
+Mcu.IPNb=8
 Mcu.Name=STM32F103R(8-B)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC2
 Mcu.Pin1=PC3
-Mcu.Pin10=PA13
-Mcu.Pin11=PA14
-Mcu.Pin12=VP_SYS_VS_Systick
-Mcu.Pin13=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin10=PA11
+Mcu.Pin11=PA12
+Mcu.Pin12=PA13
+Mcu.Pin13=PA14
+Mcu.Pin14=VP_SYS_VS_Systick
+Mcu.Pin15=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin2=PA0-WKUP
 Mcu.Pin3=PA1
 Mcu.Pin4=PA6
@@ -53,13 +64,14 @@ Mcu.Pin6=PB0
 Mcu.Pin7=PB1
 Mcu.Pin8=PB10
 Mcu.Pin9=PB11
-Mcu.PinsNb=14
+Mcu.PinsNb=16
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103RBTx
 MxCube.Version=5.1.0
 MxDb.Version=DB.5.0.10
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.CAN1_RX1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.DMA1_Channel1_IRQn=true\:3\:0\:true\:false\:true\:false\:true
 NVIC.DMA1_Channel5_IRQn=true\:2\:0\:true\:false\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -82,17 +94,21 @@ PA1.GPIOParameters=GPIO_Label
 PA1.GPIO_Label=ACS_CURRENT
 PA1.Locked=true
 PA1.Signal=ADCx_IN1
+PA11.Mode=Master
+PA11.Signal=CAN_RX
+PA12.Mode=Master
+PA12.Signal=CAN_TX
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
 PA6.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
-PA6.GPIO_Label=LOW_LIMIT_SWITCH
+PA6.GPIO_Label=LATT_LOW_LIMIT_ACTUATOR
 PA6.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PA6.Locked=true
 PA6.Signal=GPXTI6
 PA7.GPIOParameters=GPIO_Label
-PA7.GPIO_Label=HIGH_LIMIT_SWITCH
+PA7.GPIO_Label=LATT_HIGH_LIMIT_ACTUATOR
 PA7.Locked=true
 PA7.Signal=GPXTI7
 PB0.GPIOParameters=GPIO_PuPd,GPIO_Label
@@ -141,7 +157,7 @@ ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
-ProjectManager.NoMain=true
+ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=TrueSTUDIO
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=BrakeDriver.ioc
@@ -150,7 +166,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=TrueSTUDIO
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-SystemClock_Config-RCC-false-HAL-false,5-MX_I2C2_Init-I2C2-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-SystemClock_Config-RCC-false-HAL-false,5-MX_I2C2_Init-I2C2-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_CAN_Init-CAN-false-HAL-true
 RCC.APB1Freq_Value=8000000
 RCC.APB2Freq_Value=8000000
 RCC.FamilyName=M
