--- a/BrakeDriver.ioc
+++ b/BrakeDriver.ioc
@@ -6,12 +6,11 @@ ADC1.Rank-0\#ChannelRegularConversion=1
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
 ADC1.master=1
 CAN.BS1=CAN_BS1_2TQ
-CAN.BS2=CAN_BS2_1TQ
 CAN.CalculateTimeBit=1000
 CAN.CalculateTimeQuantum=250.0
-CAN.IPParameters=CalculateTimeQuantum,CalculateTimeBit,SJW,NART,BS1,Prescaler,BS2
+CAN.IPParameters=CalculateTimeQuantum,CalculateTimeBit,SJW,NART,Prescaler,BS1
 CAN.NART=ENABLE
-CAN.Prescaler=2
+CAN.Prescaler=7
 CAN.SJW=CAN_SJW_2TQ
 Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.ADC1.0.Instance=DMA1_Channel1
@@ -48,23 +47,25 @@ Mcu.IP7=TIM3
 Mcu.IPNb=8
 Mcu.Name=STM32F103R(8-B)Tx
 Mcu.Package=LQFP64
-Mcu.Pin0=PC2
-Mcu.Pin1=PC3
-Mcu.Pin10=PA11
-Mcu.Pin11=PA12
-Mcu.Pin12=PA13
-Mcu.Pin13=PA14
-Mcu.Pin14=VP_SYS_VS_Systick
-Mcu.Pin15=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin2=PA0-WKUP
-Mcu.Pin3=PA1
-Mcu.Pin4=PA6
-Mcu.Pin5=PA7
-Mcu.Pin6=PB0
-Mcu.Pin7=PB1
-Mcu.Pin8=PB10
-Mcu.Pin9=PB11
-Mcu.PinsNb=16
+Mcu.Pin0=PD0-OSC_IN
+Mcu.Pin1=PD1-OSC_OUT
+Mcu.Pin10=PB10
+Mcu.Pin11=PB11
+Mcu.Pin12=PA11
+Mcu.Pin13=PA12
+Mcu.Pin14=PA13
+Mcu.Pin15=PA14
+Mcu.Pin16=VP_SYS_VS_Systick
+Mcu.Pin17=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin2=PC2
+Mcu.Pin3=PC3
+Mcu.Pin4=PA0-WKUP
+Mcu.Pin5=PA1
+Mcu.Pin6=PA6
+Mcu.Pin7=PA7
+Mcu.Pin8=PB0
+Mcu.Pin9=PB1
+Mcu.PinsNb=18
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103RBTx
@@ -123,14 +124,15 @@ PB10.Mode=I2C
 PB10.Signal=I2C2_SCL
 PB11.Mode=I2C
 PB11.Signal=I2C2_SDA
-PC2.GPIOParameters=GPIO_Label
-PC2.GPIO_Label=ADC_1
+PC2.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
+PC2.GPIO_Label=LATT_MIN_LENGTH
+PC2.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PC2.Locked=true
-PC2.Signal=ADCx_IN12
+PC2.Signal=GPXTI2
 PC3.GPIOParameters=GPIO_Label
-PC3.GPIO_Label=ADC_2
+PC3.GPIO_Label=LATT_MAX_LENGTH
 PC3.Locked=true
-PC3.Signal=ADCx_IN13
+PC3.Signal=GPXTI3
 PCC.Checker=false
 PCC.Line=STM32F103
 PCC.MCU=STM32F103R(8-B)Tx
@@ -139,6 +141,10 @@ PCC.Seq0=0
 PCC.Series=STM32F1
 PCC.Temperature=25
 PCC.Vdd=3.3
+PD0-OSC_IN.Mode=HSE-External-Oscillator
+PD0-OSC_IN.Signal=RCC_OSC_IN
+PD1-OSC_OUT.Mode=HSE-External-Oscillator
+PD1-OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -167,21 +173,32 @@ ProjectManager.TargetToolchain=TrueSTUDIO
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-SystemClock_Config-RCC-false-HAL-false,5-MX_I2C2_Init-I2C2-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_CAN_Init-CAN-false-HAL-true
-RCC.APB1Freq_Value=8000000
-RCC.APB2Freq_Value=8000000
+RCC.ADCFreqValue=14000000
+RCC.AHBFreq_Value=28000000
+RCC.APB1Freq_Value=28000000
+RCC.APB1TimFreq_Value=28000000
+RCC.APB2Freq_Value=28000000
+RCC.APB2TimFreq_Value=28000000
+RCC.FCLKCortexFreq_Value=28000000
 RCC.FamilyName=M
-RCC.IPParameters=APB1Freq_Value,APB2Freq_Value,FamilyName,PLLCLKFreq_Value,PLLMCOFreq_Value,TimSysFreq_Value
-RCC.PLLCLKFreq_Value=8000000
-RCC.PLLMCOFreq_Value=4000000
-RCC.TimSysFreq_Value=8000000
+RCC.HCLKFreq_Value=28000000
+RCC.IPParameters=ADCFreqValue,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value
+RCC.MCOFreq_Value=28000000
+RCC.PLLCLKFreq_Value=28000000
+RCC.PLLMCOFreq_Value=14000000
+RCC.PLLMUL=RCC_PLL_MUL7
+RCC.SYSCLKFreq_VALUE=28000000
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
+RCC.TimSysFreq_Value=28000000
+RCC.USBFreq_Value=28000000
 SH.ADCx_IN1.0=ADC1_IN1,IN1
 SH.ADCx_IN1.ConfNb=1
-SH.ADCx_IN12.0=ADC1_IN12,IN12
-SH.ADCx_IN12.ConfNb=1
-SH.ADCx_IN13.0=ADC1_IN13,IN13
-SH.ADCx_IN13.ConfNb=1
 SH.GPXTI0.0=GPIO_EXTI0
 SH.GPXTI0.ConfNb=1
+SH.GPXTI2.0=GPIO_EXTI2
+SH.GPXTI2.ConfNb=1
+SH.GPXTI3.0=GPIO_EXTI3
+SH.GPXTI3.ConfNb=1
 SH.GPXTI6.0=GPIO_EXTI6
 SH.GPXTI6.ConfNb=1
 SH.GPXTI7.0=GPIO_EXTI7
