2: first tests done

--- a/BrakeDriver.ioc
+++ b/BrakeDriver.ioc
@@ -44,22 +44,18 @@ Mcu.IP3=I2C2
 Mcu.IP4=NVIC
 Mcu.IP5=RCC
 Mcu.IP6=SYS
-Mcu.IP7=TIM1
-Mcu.IP8=TIM3
-Mcu.IPNb=9
+Mcu.IP7=TIM3
+Mcu.IPNb=8
 Mcu.Name=STM32F103R(8-B)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC2
 Mcu.Pin1=PC3
-Mcu.Pin10=PA9
-Mcu.Pin11=PA10
-Mcu.Pin12=PA11
-Mcu.Pin13=PA12
-Mcu.Pin14=PA13
-Mcu.Pin15=PA14
-Mcu.Pin16=VP_SYS_VS_Systick
-Mcu.Pin17=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin18=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin10=PA11
+Mcu.Pin11=PA12
+Mcu.Pin12=PA13
+Mcu.Pin13=PA14
+Mcu.Pin14=VP_SYS_VS_Systick
+Mcu.Pin15=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin2=PA0-WKUP
 Mcu.Pin3=PA1
 Mcu.Pin4=PA6
@@ -68,7 +64,7 @@ Mcu.Pin6=PB0
 Mcu.Pin7=PB1
 Mcu.Pin8=PB10
 Mcu.Pin9=PB11
-Mcu.PinsNb=19
+Mcu.PinsNb=16
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103RBTx
@@ -98,9 +94,6 @@ PA1.GPIOParameters=GPIO_Label
 PA1.GPIO_Label=ACS_CURRENT
 PA1.Locked=true
 PA1.Signal=ADCx_IN1
-PA10.GPIOParameters=GPIO_Label
-PA10.GPIO_Label=PWM2
-PA10.Signal=S_TIM1_CH3
 PA11.Mode=Master
 PA11.Signal=CAN_RX
 PA12.Mode=Master
@@ -118,16 +111,12 @@ PA7.GPIOParameters=GPIO_Label
 PA7.GPIO_Label=LATT_HIGH_LIMIT_ACTUATOR
 PA7.Locked=true
 PA7.Signal=GPXTI7
-PA9.GPIOParameters=GPIO_Label
-PA9.GPIO_Label=PWM1
-PA9.Locked=true
-PA9.Signal=S_TIM1_CH2
 PB0.GPIOParameters=GPIO_PuPd,GPIO_Label
-PB0.GPIO_Label=ENCODER_2_A
+PB0.GPIO_Label=ENCODER_2_A_PWM
 PB0.GPIO_PuPd=GPIO_PULLDOWN
 PB0.Signal=S_TIM3_CH3
 PB1.GPIOParameters=GPIO_PuPd,GPIO_Label
-PB1.GPIO_Label=ENCODER_2_B
+PB1.GPIO_Label=ENCODER_2_B_PWM
 PB1.GPIO_PuPd=GPIO_PULLDOWN
 PB1.Signal=S_TIM3_CH4
 PB10.Mode=I2C
@@ -177,14 +166,24 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=TrueSTUDIO
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-SystemClock_Config-RCC-false-HAL-false,5-MX_I2C2_Init-I2C2-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_CAN_Init-CAN-false-HAL-true,8-MX_TIM1_Init-TIM1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-SystemClock_Config-RCC-false-HAL-false,5-MX_I2C2_Init-I2C2-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_CAN_Init-CAN-false-HAL-true
+RCC.ADCFreqValue=4000000
+RCC.AHBFreq_Value=8000000
 RCC.APB1Freq_Value=8000000
+RCC.APB1TimFreq_Value=8000000
 RCC.APB2Freq_Value=8000000
+RCC.APB2TimFreq_Value=8000000
+RCC.FCLKCortexFreq_Value=8000000
 RCC.FamilyName=M
-RCC.IPParameters=APB1Freq_Value,APB2Freq_Value,FamilyName,PLLCLKFreq_Value,PLLMCOFreq_Value,TimSysFreq_Value
-RCC.PLLCLKFreq_Value=8000000
-RCC.PLLMCOFreq_Value=4000000
+RCC.HCLKFreq_Value=8000000
+RCC.IPParameters=ADCFreqValue,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,SYSCLKFreq_VALUE,TimSysFreq_Value,USBFreq_Value
+RCC.MCOFreq_Value=8000000
+RCC.PLLCLKFreq_Value=28000000
+RCC.PLLMCOFreq_Value=14000000
+RCC.PLLMUL=RCC_PLL_MUL7
+RCC.SYSCLKFreq_VALUE=8000000
 RCC.TimSysFreq_Value=8000000
+RCC.USBFreq_Value=28000000
 SH.ADCx_IN1.0=ADC1_IN1,IN1
 SH.ADCx_IN1.ConfNb=1
 SH.ADCx_IN12.0=ADC1_IN12,IN12
@@ -197,32 +196,18 @@ SH.GPXTI6.0=GPIO_EXTI6
 SH.GPXTI6.ConfNb=1
 SH.GPXTI7.0=GPIO_EXTI7
 SH.GPXTI7.ConfNb=1
-SH.S_TIM1_CH2.0=TIM1_CH2,PWM Generation2 CH2
-SH.S_TIM1_CH2.ConfNb=1
-SH.S_TIM1_CH3.0=TIM1_CH3,PWM Generation3 CH3
-SH.S_TIM1_CH3.ConfNb=1
-SH.S_TIM3_CH3.0=TIM3_CH3,Input_Capture3_from_TI3
+SH.S_TIM3_CH3.0=TIM3_CH3,PWM Generation3 CH3
 SH.S_TIM3_CH3.ConfNb=1
-SH.S_TIM3_CH4.0=TIM3_CH4,Input_Capture4_from_TI4
+SH.S_TIM3_CH4.0=TIM3_CH4,PWM Generation4 CH4
 SH.S_TIM3_CH4.ConfNb=1
-TIM1.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
-TIM1.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
-TIM1.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
-TIM1.IPParameters=Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Prescaler,Period,AutoReloadPreload,OCPolarity_3,OCPolarity_2
-TIM1.OCPolarity_2=TIM_OCPOLARITY_LOW
-TIM1.OCPolarity_3=TIM_OCPOLARITY_LOW
-TIM1.Period=1000
-TIM1.Prescaler=64
 TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
-TIM3.Channel-Input_Capture3_from_TI3=TIM_CHANNEL_3
-TIM3.Channel-Input_Capture4_from_TI4=TIM_CHANNEL_4
-TIM3.IPParameters=Channel-Input_Capture3_from_TI3,Channel-Input_Capture4_from_TI4,Prescaler,Period,AutoReloadPreload
+TIM3.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
+TIM3.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
+TIM3.IPParameters=Prescaler,Period,AutoReloadPreload,Channel-PWM Generation4 CH4,Channel-PWM Generation3 CH3
 TIM3.Period=1000
 TIM3.Prescaler=64
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-VP_TIM1_VS_ClockSourceINT.Mode=Internal
-VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 board=custom
