--- a/BrakeDriver.ioc
+++ b/BrakeDriver.ioc
@@ -6,8 +6,8 @@ ADC1.Rank-0\#ChannelRegularConversion=1
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
 ADC1.master=1
 CAN.BS1=CAN_BS1_2TQ
-CAN.CalculateTimeBit=3500
-CAN.CalculateTimeQuantum=875.0
+CAN.CalculateTimeBit=1000
+CAN.CalculateTimeQuantum=250.0
 CAN.IPParameters=CalculateTimeQuantum,CalculateTimeBit,SJW,NART,Prescaler,BS1
 CAN.NART=ENABLE
 CAN.Prescaler=7
@@ -43,29 +43,32 @@ Mcu.IP3=I2C2
 Mcu.IP4=NVIC
 Mcu.IP5=RCC
 Mcu.IP6=SYS
-Mcu.IP7=TIM3
-Mcu.IPNb=8
+Mcu.IP7=TIM1
+Mcu.IP8=TIM3
+Mcu.IPNb=9
 Mcu.Name=STM32F103R(8-B)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PD0-OSC_IN
 Mcu.Pin1=PD1-OSC_OUT
-Mcu.Pin10=PB10
-Mcu.Pin11=PB11
-Mcu.Pin12=PA11
-Mcu.Pin13=PA12
-Mcu.Pin14=PA13
-Mcu.Pin15=PA14
-Mcu.Pin16=VP_SYS_VS_Systick
-Mcu.Pin17=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin10=PC7
+Mcu.Pin11=PC8
+Mcu.Pin12=PA9
+Mcu.Pin13=PA10
+Mcu.Pin14=PA11
+Mcu.Pin15=PA12
+Mcu.Pin16=PA13
+Mcu.Pin17=PA14
+Mcu.Pin18=VP_SYS_VS_Systick
+Mcu.Pin19=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin2=PC2
 Mcu.Pin3=PC3
 Mcu.Pin4=PA0-WKUP
 Mcu.Pin5=PA1
 Mcu.Pin6=PA6
 Mcu.Pin7=PA7
-Mcu.Pin8=PB0
-Mcu.Pin9=PB1
-Mcu.PinsNb=18
+Mcu.Pin8=PB10
+Mcu.Pin9=PB11
+Mcu.PinsNb=20
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103RBTx
@@ -95,6 +98,8 @@ PA1.GPIOParameters=GPIO_Label
 PA1.GPIO_Label=ACS_CURRENT
 PA1.Locked=true
 PA1.Signal=ADCx_IN1
+PA10.Locked=true
+PA10.Signal=S_TIM1_CH3
 PA11.Mode=Master
 PA11.Signal=CAN_RX
 PA12.Mode=Master
@@ -112,14 +117,8 @@ PA7.GPIOParameters=GPIO_Label
 PA7.GPIO_Label=LATT_HIGH_LIMIT_ACTUATOR
 PA7.Locked=true
 PA7.Signal=GPXTI7
-PB0.GPIOParameters=GPIO_PuPd,GPIO_Label
-PB0.GPIO_Label=ENCODER_2_A_PWM
-PB0.GPIO_PuPd=GPIO_PULLDOWN
-PB0.Signal=S_TIM3_CH3
-PB1.GPIOParameters=GPIO_PuPd,GPIO_Label
-PB1.GPIO_Label=ENCODER_2_B_PWM
-PB1.GPIO_PuPd=GPIO_PULLDOWN
-PB1.Signal=S_TIM3_CH4
+PA9.Locked=true
+PA9.Signal=S_TIM1_CH2
 PB10.Mode=I2C
 PB10.Signal=I2C2_SCL
 PB11.Mode=I2C
@@ -133,6 +132,14 @@ PC3.GPIOParameters=GPIO_Label
 PC3.GPIO_Label=LATT_MAX_LENGTH
 PC3.Locked=true
 PC3.Signal=GPXTI3
+PC7.GPIOParameters=GPIO_Label
+PC7.GPIO_Label=Enable1
+PC7.Locked=true
+PC7.Signal=GPIO_Output
+PC8.GPIOParameters=GPIO_Label
+PC8.GPIO_Label=Enable2
+PC8.Locked=true
+PC8.Signal=GPIO_Output
 PCC.Checker=false
 PCC.Line=STM32F103
 PCC.MCU=STM32F103R(8-B)Tx
@@ -163,7 +170,7 @@ ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
-ProjectManager.NoMain=false
+ProjectManager.NoMain=true
 ProjectManager.PreviousToolchain=TrueSTUDIO
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=BrakeDriver.ioc
@@ -172,23 +179,24 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=TrueSTUDIO
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-SystemClock_Config-RCC-false-HAL-false,5-MX_I2C2_Init-I2C2-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_CAN_Init-CAN-false-HAL-true
-RCC.ADCFreqValue=4000000
-RCC.AHBFreq_Value=8000000
-RCC.APB1Freq_Value=8000000
-RCC.APB1TimFreq_Value=8000000
-RCC.APB2Freq_Value=8000000
-RCC.APB2TimFreq_Value=8000000
-RCC.FCLKCortexFreq_Value=8000000
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-SystemClock_Config-RCC-false-HAL-false,5-MX_I2C2_Init-I2C2-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_CAN_Init-CAN-false-HAL-true,8-MX_TIM1_Init-TIM1-false-HAL-true
+RCC.ADCFreqValue=14000000
+RCC.AHBFreq_Value=28000000
+RCC.APB1Freq_Value=28000000
+RCC.APB1TimFreq_Value=28000000
+RCC.APB2Freq_Value=28000000
+RCC.APB2TimFreq_Value=28000000
+RCC.FCLKCortexFreq_Value=28000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=8000000
-RCC.IPParameters=ADCFreqValue,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,SYSCLKFreq_VALUE,TimSysFreq_Value,USBFreq_Value
-RCC.MCOFreq_Value=8000000
+RCC.HCLKFreq_Value=28000000
+RCC.IPParameters=ADCFreqValue,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value
+RCC.MCOFreq_Value=28000000
 RCC.PLLCLKFreq_Value=28000000
 RCC.PLLMCOFreq_Value=14000000
 RCC.PLLMUL=RCC_PLL_MUL7
-RCC.SYSCLKFreq_VALUE=8000000
-RCC.TimSysFreq_Value=8000000
+RCC.SYSCLKFreq_VALUE=28000000
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
+RCC.TimSysFreq_Value=28000000
 RCC.USBFreq_Value=28000000
 SH.ADCx_IN1.0=ADC1_IN1,IN1
 SH.ADCx_IN1.ConfNb=1
@@ -202,14 +210,17 @@ SH.GPXTI6.0=GPIO_EXTI6
 SH.GPXTI6.ConfNb=1
 SH.GPXTI7.0=GPIO_EXTI7
 SH.GPXTI7.ConfNb=1
-SH.S_TIM3_CH3.0=TIM3_CH3,PWM Generation3 CH3
-SH.S_TIM3_CH3.ConfNb=1
-SH.S_TIM3_CH4.0=TIM3_CH4,PWM Generation4 CH4
-SH.S_TIM3_CH4.ConfNb=1
+SH.S_TIM1_CH2.0=TIM1_CH2,PWM Generation2 CH2
+SH.S_TIM1_CH2.ConfNb=1
+SH.S_TIM1_CH3.0=TIM1_CH3,PWM Generation3 CH3
+SH.S_TIM1_CH3.ConfNb=1
+TIM1.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM1.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM1.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
+TIM1.IPParameters=Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Prescaler,AutoReloadPreload
+TIM1.Prescaler=72
 TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
-TIM3.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
-TIM3.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
-TIM3.IPParameters=Prescaler,Period,AutoReloadPreload,Channel-PWM Generation4 CH4,Channel-PWM Generation3 CH3
+TIM3.IPParameters=Prescaler,Period,AutoReloadPreload
 TIM3.Period=1000
 TIM3.Prescaler=64
 VP_SYS_VS_Systick.Mode=SysTick
