brake driver alghorithm change + gpio interrupts

--- a/BrakeDriver.ioc
+++ b/BrakeDriver.ioc
@@ -44,50 +44,51 @@ Mcu.IP4=NVIC
 Mcu.IP5=RCC
 Mcu.IP6=SYS
 Mcu.IP7=TIM1
-Mcu.IP8=TIM3
-Mcu.IPNb=9
+Mcu.IPNb=8
 Mcu.Name=STM32F103R(8-B)Tx
 Mcu.Package=LQFP64
-Mcu.Pin0=PD0-OSC_IN
-Mcu.Pin1=PD1-OSC_OUT
-Mcu.Pin10=PC7
-Mcu.Pin11=PC8
-Mcu.Pin12=PA9
-Mcu.Pin13=PA10
+Mcu.Pin0=PC13-TAMPER-RTC
+Mcu.Pin1=PD0-OSC_IN
+Mcu.Pin10=PB10
+Mcu.Pin11=PB11
+Mcu.Pin12=PC7
+Mcu.Pin13=PA9
 Mcu.Pin14=PA11
 Mcu.Pin15=PA12
 Mcu.Pin16=PA13
 Mcu.Pin17=PA14
 Mcu.Pin18=VP_SYS_VS_Systick
-Mcu.Pin19=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin2=PC2
-Mcu.Pin3=PC3
-Mcu.Pin4=PA0-WKUP
-Mcu.Pin5=PA1
-Mcu.Pin6=PA6
-Mcu.Pin7=PA7
-Mcu.Pin8=PB10
-Mcu.Pin9=PB11
-Mcu.PinsNb=20
+Mcu.Pin2=PD1-OSC_OUT
+Mcu.Pin3=PC2
+Mcu.Pin4=PC3
+Mcu.Pin5=PA0-WKUP
+Mcu.Pin6=PA1
+Mcu.Pin7=PA5
+Mcu.Pin8=PA6
+Mcu.Pin9=PA7
+Mcu.PinsNb=19
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103RBTx
 MxCube.Version=5.1.0
 MxDb.Version=DB.5.0.10
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.CAN1_RX1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-NVIC.DMA1_Channel1_IRQn=true\:3\:0\:true\:false\:true\:false\:true
-NVIC.DMA1_Channel5_IRQn=true\:2\:0\:true\:false\:true\:false\:true
+NVIC.CAN1_RX1_IRQn=true\:1\:0\:true\:true\:true\:3\:true\:true
+NVIC.DMA1_Channel1_IRQn=true\:3\:0\:true\:true\:true\:1\:false\:true
+NVIC.DMA1_Channel5_IRQn=true\:2\:0\:true\:true\:true\:2\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.EXTI0_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.EXTI2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.EXTI3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.EXTI9_5_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
+NVIC.PriorityGroup=NVIC_PRIORITYGROUP_2
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-NVIC.TIM3_IRQn=true\:1\:0\:true\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA0-WKUP.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA0-WKUP.GPIO_Label=ACS_FAULT
@@ -98,48 +99,62 @@ PA1.GPIOParameters=GPIO_Label
 PA1.GPIO_Label=ACS_CURRENT
 PA1.Locked=true
 PA1.Signal=ADCx_IN1
-PA10.Locked=true
-PA10.Signal=S_TIM1_CH3
+PA11.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA11.GPIO_Label=CAN_RX
+PA11.GPIO_PuPd=GPIO_PULLDOWN
 PA11.Mode=Master
 PA11.Signal=CAN_RX
+PA12.GPIOParameters=GPIO_Label
+PA12.GPIO_Label=CAN_TX
 PA12.Mode=Master
 PA12.Signal=CAN_TX
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
-PA6.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
+PA5.GPIOParameters=GPIO_Label
+PA5.GPIO_Label=GREEEN_LED
+PA5.Locked=true
+PA5.Signal=GPIO_Output
+PA6.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PA6.GPIO_Label=LATT_LOW_LIMIT_ACTUATOR
 PA6.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PA6.GPIO_PuPd=GPIO_PULLDOWN
 PA6.Locked=true
 PA6.Signal=GPXTI6
-PA7.GPIOParameters=GPIO_Label
+PA7.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA7.GPIO_Label=LATT_HIGH_LIMIT_ACTUATOR
+PA7.GPIO_PuPd=GPIO_PULLDOWN
 PA7.Locked=true
 PA7.Signal=GPXTI7
+PA9.GPIOParameters=GPIO_Label
+PA9.GPIO_Label=MOTOR_PWM
 PA9.Locked=true
 PA9.Signal=S_TIM1_CH2
 PB10.Mode=I2C
 PB10.Signal=I2C2_SCL
 PB11.Mode=I2C
 PB11.Signal=I2C2_SDA
-PC2.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
+PC13-TAMPER-RTC.GPIOParameters=GPIO_Label
+PC13-TAMPER-RTC.GPIO_Label=USER_BUTTON
+PC13-TAMPER-RTC.Locked=true
+PC13-TAMPER-RTC.Signal=GPXTI13
+PC2.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PC2.GPIO_Label=LATT_MIN_LENGTH
 PC2.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PC2.GPIO_PuPd=GPIO_PULLDOWN
 PC2.Locked=true
 PC2.Signal=GPXTI2
-PC3.GPIOParameters=GPIO_Label
+PC3.GPIOParameters=GPIO_PuPd,GPIO_Label
 PC3.GPIO_Label=LATT_MAX_LENGTH
+PC3.GPIO_PuPd=GPIO_PULLDOWN
 PC3.Locked=true
 PC3.Signal=GPXTI3
-PC7.GPIOParameters=GPIO_Label
-PC7.GPIO_Label=Enable1
+PC7.GPIOParameters=GPIO_PuPd,GPIO_Label
+PC7.GPIO_Label=MOTOR_DIR
+PC7.GPIO_PuPd=GPIO_PULLDOWN
 PC7.Locked=true
 PC7.Signal=GPIO_Output
-PC8.GPIOParameters=GPIO_Label
-PC8.GPIO_Label=Enable2
-PC8.Locked=true
-PC8.Signal=GPIO_Output
 PCC.Checker=false
 PCC.Line=STM32F103
 PCC.MCU=STM32F103R(8-B)Tx
@@ -177,9 +192,13 @@ ProjectManager.ProjectFileName=BrakeDriver.ioc
 ProjectManager.ProjectName=BrakeDriver
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=TrueSTUDIO
+ProjectManager.TemplateDestinationPath=D\:\\emaks power project\\github_repo\\BrakeDriver
+ProjectManager.TemplateSourcePath=C\:\\Program Files\\STMicroelectronics\\STM32Cube\\STM32CubeMX\\db\\extra_templates
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-SystemClock_Config-RCC-false-HAL-false,5-MX_I2C2_Init-I2C2-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_CAN_Init-CAN-false-HAL-true,8-MX_TIM1_Init-TIM1-false-HAL-true
+ProjectManager.UseDefaultDestinationPath=true
+ProjectManager.UseDefaultSourcePath=true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-SystemClock_Config-RCC-false-HAL-false,5-MX_I2C2_Init-I2C2-false-HAL-true,6-MX_CAN_Init-CAN-false-HAL-true,7-MX_TIM1_Init-TIM1-false-HAL-true
 RCC.ADCFreqValue=14000000
 RCC.AHBFreq_Value=28000000
 RCC.APB1Freq_Value=28000000
@@ -202,6 +221,8 @@ SH.ADCx_IN1.0=ADC1_IN1,IN1
 SH.ADCx_IN1.ConfNb=1
 SH.GPXTI0.0=GPIO_EXTI0
 SH.GPXTI0.ConfNb=1
+SH.GPXTI13.0=GPIO_EXTI13
+SH.GPXTI13.ConfNb=1
 SH.GPXTI2.0=GPIO_EXTI2
 SH.GPXTI2.ConfNb=1
 SH.GPXTI3.0=GPIO_EXTI3
@@ -212,19 +233,10 @@ SH.GPXTI7.0=GPIO_EXTI7
 SH.GPXTI7.ConfNb=1
 SH.S_TIM1_CH2.0=TIM1_CH2,PWM Generation2 CH2
 SH.S_TIM1_CH2.ConfNb=1
-SH.S_TIM1_CH3.0=TIM1_CH3,PWM Generation3 CH3
-SH.S_TIM1_CH3.ConfNb=1
 TIM1.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM1.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
-TIM1.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
-TIM1.IPParameters=Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Prescaler,AutoReloadPreload
+TIM1.IPParameters=Channel-PWM Generation2 CH2,Prescaler,AutoReloadPreload
 TIM1.Prescaler=72
-TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
-TIM3.IPParameters=Prescaler,Period,AutoReloadPreload
-TIM3.Period=1000
-TIM3.Prescaler=64
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-VP_TIM3_VS_ClockSourceINT.Mode=Internal
-VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 board=custom
