--- a/BrakeDriver.ioc
+++ b/BrakeDriver.ioc
@@ -5,10 +5,12 @@ ADC1.NbrOfConversionFlag=1
 ADC1.Rank-0\#ChannelRegularConversion=1
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
 ADC1.master=1
+CAN.ABOM=ENABLE
 CAN.BS1=CAN_BS1_2TQ
 CAN.CalculateTimeBit=1000
 CAN.CalculateTimeQuantum=250.0
-CAN.IPParameters=CalculateTimeQuantum,CalculateTimeBit,SJW,NART,Prescaler,BS1
+CAN.IPParameters=CalculateTimeQuantum,CalculateTimeBit,SJW,NART,Prescaler,BS1,ABOM,Mode
+CAN.Mode=CAN_MODE_NORMAL
 CAN.NART=ENABLE
 CAN.Prescaler=7
 CAN.SJW=CAN_SJW_2TQ
@@ -73,7 +75,7 @@ Mcu.UserName=STM32F103RBTx
 MxCube.Version=5.1.0
 MxDb.Version=DB.5.0.10
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.CAN1_RX1_IRQn=true\:1\:0\:true\:true\:true\:3\:true\:true
+NVIC.CAN1_RX1_IRQn=true\:0\:0\:false\:true\:true\:4\:true\:true
 NVIC.DMA1_Channel1_IRQn=true\:3\:0\:true\:true\:true\:1\:false\:true
 NVIC.DMA1_Channel5_IRQn=true\:2\:0\:true\:true\:true\:2\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -81,7 +83,6 @@ NVIC.EXTI0_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.EXTI2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.EXTI3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-NVIC.EXTI9_5_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -89,6 +90,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_2
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.USB_HP_CAN1_TX_IRQn=true\:0\:0\:false\:true\:true\:3\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA0-WKUP.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA0-WKUP.GPIO_Label=ACS_FAULT
@@ -101,7 +103,7 @@ PA1.Locked=true
 PA1.Signal=ADCx_IN1
 PA11.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA11.GPIO_Label=CAN_RX
-PA11.GPIO_PuPd=GPIO_PULLDOWN
+PA11.GPIO_PuPd=GPIO_PULLUP
 PA11.Mode=Master
 PA11.Signal=CAN_RX
 PA12.GPIOParameters=GPIO_Label
