--- a/BrakeDriver.ioc
+++ b/BrakeDriver.ioc
@@ -1,10 +1,4 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_1
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,master
-ADC1.NbrOfConversionFlag=1
-ADC1.Rank-0\#ChannelRegularConversion=1
-ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
-ADC1.master=1
 CAN.ABOM=ENABLE
 CAN.BS1=CAN_BS1_2TQ
 CAN.CalculateTimeBit=1000
@@ -14,61 +8,28 @@ CAN.Mode=CAN_MODE_NORMAL
 CAN.NART=ENABLE
 CAN.Prescaler=7
 CAN.SJW=CAN_SJW_2TQ
-Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
-Dma.ADC1.0.Instance=DMA1_Channel1
-Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
-Dma.ADC1.0.MemInc=DMA_MINC_ENABLE
-Dma.ADC1.0.Mode=DMA_CIRCULAR
-Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
-Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
-Dma.ADC1.0.Priority=DMA_PRIORITY_LOW
-Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-Dma.I2C2_RX.1.Direction=DMA_PERIPH_TO_MEMORY
-Dma.I2C2_RX.1.Instance=DMA1_Channel5
-Dma.I2C2_RX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.I2C2_RX.1.MemInc=DMA_MINC_ENABLE
-Dma.I2C2_RX.1.Mode=DMA_NORMAL
-Dma.I2C2_RX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.I2C2_RX.1.PeriphInc=DMA_PINC_DISABLE
-Dma.I2C2_RX.1.Priority=DMA_PRIORITY_LOW
-Dma.I2C2_RX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-Dma.Request0=ADC1
-Dma.Request1=I2C2_RX
-Dma.RequestsNb=2
 File.Version=6
 KeepUserPlacement=false
 Mcu.Family=STM32F1
-Mcu.IP0=ADC1
-Mcu.IP1=CAN
-Mcu.IP2=DMA
-Mcu.IP3=I2C2
-Mcu.IP4=NVIC
-Mcu.IP5=RCC
-Mcu.IP6=SYS
-Mcu.IP7=TIM1
-Mcu.IPNb=8
+Mcu.IP0=CAN
+Mcu.IP1=NVIC
+Mcu.IP2=RCC
+Mcu.IP3=SYS
+Mcu.IPNb=4
 Mcu.Name=STM32F103R(8-B)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PD0-OSC_IN
-Mcu.Pin10=PB10
-Mcu.Pin11=PB11
-Mcu.Pin12=PC7
-Mcu.Pin13=PA9
-Mcu.Pin14=PA11
-Mcu.Pin15=PA12
-Mcu.Pin16=PA13
-Mcu.Pin17=PA14
-Mcu.Pin18=VP_SYS_VS_Systick
+Mcu.Pin10=VP_SYS_VS_Systick
 Mcu.Pin2=PD1-OSC_OUT
-Mcu.Pin3=PC2
-Mcu.Pin4=PC3
-Mcu.Pin5=PA0-WKUP
-Mcu.Pin6=PA1
-Mcu.Pin7=PA5
-Mcu.Pin8=PA6
-Mcu.Pin9=PA7
-Mcu.PinsNb=19
+Mcu.Pin3=PA5
+Mcu.Pin4=PA6
+Mcu.Pin5=PA7
+Mcu.Pin6=PA11
+Mcu.Pin7=PA12
+Mcu.Pin8=PA13
+Mcu.Pin9=PA14
+Mcu.PinsNb=11
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103RBTx
@@ -76,13 +37,8 @@ MxCube.Version=5.1.0
 MxDb.Version=DB.5.0.10
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.CAN1_RX1_IRQn=true\:0\:0\:false\:true\:true\:4\:true\:true
-NVIC.DMA1_Channel1_IRQn=true\:3\:0\:true\:true\:true\:1\:false\:true
-NVIC.DMA1_Channel5_IRQn=true\:2\:0\:true\:true\:true\:2\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.EXTI0_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-NVIC.EXTI2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-NVIC.EXTI3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -92,15 +48,6 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.USB_HP_CAN1_TX_IRQn=true\:0\:0\:false\:true\:true\:3\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-PA0-WKUP.GPIOParameters=GPIO_PuPd,GPIO_Label
-PA0-WKUP.GPIO_Label=ACS_FAULT
-PA0-WKUP.GPIO_PuPd=GPIO_PULLDOWN
-PA0-WKUP.Locked=true
-PA0-WKUP.Signal=GPXTI0
-PA1.GPIOParameters=GPIO_Label
-PA1.GPIO_Label=ACS_CURRENT
-PA1.Locked=true
-PA1.Signal=ADCx_IN1
 PA11.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA11.GPIO_Label=CAN_RX
 PA11.GPIO_PuPd=GPIO_PULLUP
@@ -129,34 +76,10 @@ PA7.GPIO_Label=LATT_HIGH_LIMIT_ACTUATOR
 PA7.GPIO_PuPd=GPIO_PULLDOWN
 PA7.Locked=true
 PA7.Signal=GPXTI7
-PA9.GPIOParameters=GPIO_Label
-PA9.GPIO_Label=MOTOR_PWM
-PA9.Locked=true
-PA9.Signal=S_TIM1_CH2
-PB10.Mode=I2C
-PB10.Signal=I2C2_SCL
-PB11.Mode=I2C
-PB11.Signal=I2C2_SDA
 PC13-TAMPER-RTC.GPIOParameters=GPIO_Label
 PC13-TAMPER-RTC.GPIO_Label=USER_BUTTON
 PC13-TAMPER-RTC.Locked=true
 PC13-TAMPER-RTC.Signal=GPXTI13
-PC2.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
-PC2.GPIO_Label=LATT_MIN_LENGTH
-PC2.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
-PC2.GPIO_PuPd=GPIO_PULLDOWN
-PC2.Locked=true
-PC2.Signal=GPXTI2
-PC3.GPIOParameters=GPIO_PuPd,GPIO_Label
-PC3.GPIO_Label=LATT_MAX_LENGTH
-PC3.GPIO_PuPd=GPIO_PULLDOWN
-PC3.Locked=true
-PC3.Signal=GPXTI3
-PC7.GPIOParameters=GPIO_PuPd,GPIO_Label
-PC7.GPIO_Label=MOTOR_DIR
-PC7.GPIO_PuPd=GPIO_PULLDOWN
-PC7.Locked=true
-PC7.Signal=GPIO_Output
 PCC.Checker=false
 PCC.Line=STM32F103
 PCC.MCU=STM32F103R(8-B)Tx
@@ -200,7 +123,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
 ProjectManager.UseDefaultDestinationPath=true
 ProjectManager.UseDefaultSourcePath=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-SystemClock_Config-RCC-false-HAL-false,5-MX_I2C2_Init-I2C2-false-HAL-true,6-MX_CAN_Init-CAN-false-HAL-true,7-MX_TIM1_Init-TIM1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_CAN_Init-CAN-false-HAL-true
 RCC.ADCFreqValue=14000000
 RCC.AHBFreq_Value=28000000
 RCC.APB1Freq_Value=28000000
@@ -219,26 +142,12 @@ RCC.SYSCLKFreq_VALUE=28000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=28000000
 RCC.USBFreq_Value=28000000
-SH.ADCx_IN1.0=ADC1_IN1,IN1
-SH.ADCx_IN1.ConfNb=1
-SH.GPXTI0.0=GPIO_EXTI0
-SH.GPXTI0.ConfNb=1
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
-SH.GPXTI2.0=GPIO_EXTI2
-SH.GPXTI2.ConfNb=1
-SH.GPXTI3.0=GPIO_EXTI3
-SH.GPXTI3.ConfNb=1
 SH.GPXTI6.0=GPIO_EXTI6
 SH.GPXTI6.ConfNb=1
 SH.GPXTI7.0=GPIO_EXTI7
 SH.GPXTI7.ConfNb=1
-SH.S_TIM1_CH2.0=TIM1_CH2,PWM Generation2 CH2
-SH.S_TIM1_CH2.ConfNb=1
-TIM1.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
-TIM1.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
-TIM1.IPParameters=Channel-PWM Generation2 CH2,Prescaler,AutoReloadPreload
-TIM1.Prescaler=72
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
